--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -53,44 +53,42 @@
     
     <!-- Unchanged Files -->
     <Grid Grid.Row="1">
-      <DataGrid Margin="8"
-                Background="{DynamicResource Brush.Contents}"
-                ItemsSource="{Binding Files}"
-                SelectionMode="Single"
-                CanUserReorderColumns="False"
-                CanUserResizeColumns="False"
-                CanUserSortColumns="False"
-                IsReadOnly="True"
-                HeadersVisibility="None"
-                Focusable="False"
-                RowHeight="26"
-                BorderThickness="1"
-                BorderBrush="{DynamicResource Brush.Border2}"
-                HorizontalScrollBarVisibility="Disabled"
-                VerticalScrollBarVisibility="Auto">
-        <DataGrid.Columns>
-          <DataGridTemplateColumn Width="*">
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate>
-                <StackPanel Orientation="Horizontal">
-                  <Path Width="14" Height="14" Margin="8,0,4,0" Data="{StaticResource Icons.File}"/>
-                  <TextBlock Text="{Binding}" Margin="4,0"/>
-                </StackPanel>
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
+      <ListBox Margin="8"
+               BorderThickness="1"
+               BorderBrush="{DynamicResource Brush.Border2}"
+               Background="{DynamicResource Brush.Contents}"
+               SelectionMode="Single"
+               ItemsSource="{Binding Files}"
+               ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+               ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <ListBox.Styles>
+          <Style Selector="ListBoxItem">
+            <Setter Property="Margin" Value="0"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Height" Value="26"/>
+          </Style>
+        </ListBox.Styles>
 
-          <DataGridTemplateColumn>
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate>
-                <Button Classes="icon_button" Click="OnRemoveButtonClicked">
-                  <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
-                </Button>
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-        </DataGrid.Columns>
-      </DataGrid>
+        <ListBox.ItemsPanel>
+          <ItemsPanelTemplate>
+            <VirtualizingStackPanel Orientation="Vertical"/>
+          </ItemsPanelTemplate>
+        </ListBox.ItemsPanel>
+        
+        <ListBox.ItemTemplate>
+          <DataTemplate>
+            <Grid Height="26" ColumnDefinitions="26,*,30">
+              <Path Grid.Column="0" Width="14" Height="14" Margin="8,0,0,0" HorizontalAlignment="Center" Data="{StaticResource Icons.File}"/>
+              <Border Grid.Column="1" Margin="4,0" ClipToBounds="True">
+                <TextBlock Grid.Column="1" Text="{Binding}" HorizontalAlignment="Left"/>
+              </Border>
+              <Button Grid.Column="2" Classes="icon_button" Click="OnRemoveButtonClicked">
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
+              </Button>
+            </Grid>
+          </DataTemplate>
+        </ListBox.ItemTemplate>
+      </ListBox>
 
       <!-- Empty -->
       <StackPanel Orientation="Vertical"
