--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -53,51 +53,54 @@
         <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
 
-      <DataGrid Grid.Column="0"
-                Background="{DynamicResource Brush.Contents}"
-                BorderThickness="1"
-                Margin="8,4,4,8"
-                BorderBrush="{DynamicResource Brush.Border2}"
-                ItemsSource="{Binding Commits}"
-                SelectedItem="{Binding SelectedCommit, Mode=TwoWay}"
-                SelectionMode="Single"
-                CanUserReorderColumns="False"
-                CanUserResizeColumns="False"
-                CanUserSortColumns="False"
-                IsReadOnly="True"
-                HeadersVisibility="None"
-                Focusable="False"
-                RowHeight="50"
-                HorizontalScrollBarVisibility="Disabled"
-                VerticalScrollBarVisibility="Auto">
-        <DataGrid.Columns>
-          <DataGridTemplateColumn Width="*">
-            <DataGridTemplateColumn.CellTemplate>
-              <DataTemplate DataType="m:Commit">
-                <Border BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="0,0,0,1" Padding="4">
-                  <Grid RowDefinitions="Auto,*">
-                    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto,Auto">
-                      <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
-                      <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0"/>
-                      <TextBlock Grid.Column="2" 
-                                 Classes="primary" 
-                                 Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
-                                 Background="Transparent"
-                                 Foreground="DarkOrange"
-                                 TextDecorations="Underline"
-                                 Margin="8,0,0,0"
-                                 PointerPressed="OnPressCommitSHA"/>
-                      <TextBlock Grid.Column="3" Classes="primary" Text="{Binding AuthorTimeShortStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
-                    </Grid>
+      <ListBox Grid.Column="0"
+               Background="{DynamicResource Brush.Contents}"
+               BorderThickness="1"
+               Margin="8,4,4,8"
+               BorderBrush="{DynamicResource Brush.Border2}"
+               ItemsSource="{Binding Commits}"
+               SelectedItem="{Binding SelectedCommit, Mode=TwoWay}"
+               SelectionMode="Single"
+               ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+               ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <ListBox.Styles>
+          <Style Selector="ListBoxItem">
+            <Setter Property="Margin" Value="0"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Height" Value="50"/>
+          </Style>
+        </ListBox.Styles>
 
-                    <TextBlock Grid.Row="1" Classes="primary" Text="{Binding Subject}" VerticalAlignment="Bottom"/>
-                  </Grid>
-                </Border>
-              </DataTemplate>
-            </DataGridTemplateColumn.CellTemplate>
-          </DataGridTemplateColumn>
-        </DataGrid.Columns>
-      </DataGrid>
+        <ListBox.ItemsPanel>
+          <ItemsPanelTemplate>
+            <VirtualizingStackPanel Orientation="Vertical"/>
+          </ItemsPanelTemplate>
+        </ListBox.ItemsPanel>
+
+        <ListBox.ItemTemplate>
+          <DataTemplate DataType="m:Commit">
+            <Border BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="0,0,0,1" Padding="4">
+              <Grid RowDefinitions="Auto,*">
+                <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto,Auto">
+                  <v:Avatar Grid.Column="0" Width="16" Height="16" VerticalAlignment="Center" IsHitTestVisible="False" User="{Binding Author}"/>
+                  <TextBlock Grid.Column="1" Classes="primary" Text="{Binding Author.Name}" Margin="8,0,0,0" ClipToBounds="True"/>
+                  <TextBlock Grid.Column="2"
+                             Classes="primary"
+                             Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
+                             Background="Transparent"
+                             Foreground="DarkOrange"
+                             TextDecorations="Underline"
+                             Margin="8,0,0,0"
+                             PointerPressed="OnPressCommitSHA"/>
+                  <TextBlock Grid.Column="3" Classes="primary" Text="{Binding AuthorTimeShortStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
+                </Grid>
+
+                <TextBlock Grid.Row="1" Classes="primary" Text="{Binding Subject}" VerticalAlignment="Bottom"/>
+              </Grid>
+            </Border>
+          </DataTemplate>
+        </ListBox.ItemTemplate>
+      </ListBox>
 
       <GridSplitter Grid.Column="1"
                     MinWidth="1"
